syntax = "proto3";

package orc.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/randalmurphal/orc/gen/proto/orc/v1;orcv1";

// =============================================================================
// ENUMS
// =============================================================================

// Settings scope
enum SettingsScope {
  SETTINGS_SCOPE_UNSPECIFIED = 0;
  SETTINGS_SCOPE_GLOBAL = 1;   // ~/.claude/
  SETTINGS_SCOPE_PROJECT = 2;  // .claude/
}

// Hook event type
enum HookEvent {
  HOOK_EVENT_UNSPECIFIED = 0;
  HOOK_EVENT_PRE_TOOL_USE = 1;
  HOOK_EVENT_POST_TOOL_USE = 2;
  HOOK_EVENT_NOTIFICATION = 3;
  HOOK_EVENT_STOP = 4;
}

// =============================================================================
// MESSAGES
// =============================================================================

// ORC configuration
message Config {
  // Automation settings
  AutomationConfig automation = 1;
  // Completion settings
  CompletionConfig completion = 2;
  // Export settings
  ExportConfig export = 3;
  // Claude settings
  ClaudeConfig claude = 4;
  // Execution settings (parallel tasks, cost limits)
  ExecutionConfig execution = 5;
  // Jira Cloud import settings
  JiraConfig jira = 6;
}

message AutomationConfig {
  // Automation profile: "auto", "fast", "safe", "strict"
  string profile = 1;
  // Auto-approve decisions
  bool auto_approve = 2;
  // Auto-skip blocked phases
  bool auto_skip = 3;
}

message CompletionConfig {
  // Action on completion: "pr", "merge", "none"
  string action = 1;
  // Auto-merge after finalize
  bool auto_merge = 2;
  // Target branch for PRs
  optional string target_branch = 3;
  // Delete branch after merge
  bool delete_branch = 4;
  // PR creation settings
  PRConfig pr = 5;
  // CI/merge settings
  CIConfig ci = 6;
}

// PR creation configuration
message PRConfig {
  // Create PR as draft
  bool draft = 1;
  // Labels to apply
  repeated string labels = 2;
  // Individual reviewer usernames
  repeated string reviewers = 3;
  // Team reviewer slugs (GitHub) or group paths (GitLab)
  repeated string team_reviewers = 4;
  // Usernames to assign
  repeated string assignees = 5;
  // Allow maintainers to push (GitHub) / allow collaboration (GitLab)
  bool maintainer_can_modify = 6;
  // Auto-approve PR after creation
  bool auto_approve = 7;
  // Enable auto-merge (GitLab only, GitHub requires GraphQL)
  bool auto_merge = 8;
}

// CI polling and merge configuration
message CIConfig {
  // Wait for CI checks before merge
  bool wait_for_ci = 1;
  // CI timeout in minutes
  int32 ci_timeout = 2;
  // CI poll interval in seconds
  int32 poll_interval = 3;
  // Merge when CI passes
  bool merge_on_ci_pass = 4;
  // Merge method: "merge", "squash", "rebase"
  string merge_method = 5;
  // Commit message template for merge commits (supports {{TASK_ID}}, {{TASK_TITLE}}, {{TASK_BRANCH}})
  string merge_commit_template = 6;
  // Commit message template for squash commits
  string squash_commit_template = 7;
  // Verify HEAD SHA before merging to prevent stale merges
  bool verify_sha_on_merge = 8;
}

message ExportConfig {
  // Include transcripts in export
  bool include_transcripts = 1;
  // Include attachments in export
  bool include_attachments = 2;
  // Export format: "json", "tar.gz"
  string format = 3;
}

message ClaudeConfig {
  // Default model
  string model = 1;
  // Enable thinking mode
  bool thinking = 2;
  // Max turns per phase
  int32 max_turns = 3;
  // Temperature
  double temperature = 4;
}

// Execution settings for UI (parallel tasks, cost limits)
message ExecutionConfig {
  // Maximum parallel tasks (1-5, default 2)
  int32 parallel_tasks = 1;
  // Daily cost limit in dollars (0-100, default 25)
  int32 cost_limit = 2;
}

// Jira Cloud import configuration
message JiraConfig {
  // Jira Cloud base URL (e.g., "https://acme.atlassian.net")
  string url = 1;
  // Email for basic auth
  string email = 2;
  // Environment variable name containing the API token (default: ORC_JIRA_TOKEN)
  string token_env_var = 3;
  // Map Jira epics to orc initiatives (default: true)
  optional bool epic_to_initiative = 4;
  // Default weight for imported tasks (trivial|small|medium|large)
  string default_weight = 5;
  // Default queue for imported tasks (active|backlog)
  string default_queue = 6;
  // Custom field ID → metadata key name mapping
  // Example: {"customfield_10020": "jira_sprint"}
  map<string, string> custom_fields = 7;
  // Project keys imported by default when --project is not specified
  repeated string default_projects = 8;
  // Jira status name → orc queue override ("active", "backlog")
  map<string, string> status_overrides = 9;
  // Jira issue type → orc category override ("bug", "feature", "refactor", etc.)
  map<string, string> category_overrides = 10;
  // Jira priority name → orc priority override ("critical", "high", "normal", "low")
  map<string, string> priority_overrides = 11;
}

// Claude Code settings (from settings.json)
message Settings {
  // Enabled tools
  repeated string tools = 1;
  // Allowed MCP servers
  repeated string mcp_servers = 2;
  // Custom instructions
  optional string custom_instructions = 3;
  // Permission overrides
  map<string, bool> permissions = 4;
}

// Settings with hierarchy info
message SettingsHierarchy {
  Settings global = 1;
  Settings project = 2;
  Settings merged = 3;
}

// Hook definition (backed by hook_scripts table in GlobalDB)
message Hook {
  // Hook name
  string name = 1;
  // Settings scope
  SettingsScope scope = 9;
  // DB primary key
  string id = 10;
  // Human-readable description
  string description = 11;
  // Script body (bash content)
  string content = 12;
  // Event type: "Stop", "PreToolUse", "PostToolUse"
  string event_type = 13;
  // Whether this is a built-in hook
  bool is_builtin = 14;
}

// Skill definition (backed by skills table in GlobalDB)
message Skill {
  // Skill name
  string name = 1;
  // Description
  string description = 2;
  // Skill content (markdown)
  string content = 3;
  // Whether skill is user-invocable
  bool user_invocable = 4;
  // Input schema (JSON)
  optional string input_schema = 5;
  // Settings scope
  SettingsScope scope = 6;
  // DB primary key
  string id = 8;
  // Whether this is a built-in skill
  bool is_builtin = 9;
  // Supporting files: filename -> content
  map<string, string> supporting_files = 10;
}

// CLAUDE.md content
message ClaudeMd {
  // File path
  string path = 1;
  // Content
  string content = 2;
  // Scope
  SettingsScope scope = 3;
}

// Prompt template
message PromptTemplate {
  // Phase ID
  string phase = 1;
  // Prompt content
  string content = 2;
  // Whether this is a custom prompt
  bool is_custom = 3;
  // Source path (if custom)
  optional string path = 4;
}

// Available variable for prompts
message PromptVariable {
  // Variable name (without braces)
  string name = 1;
  // Description
  string description = 2;
  // Example value
  optional string example = 3;
}

// Constitution (project principles)
message Constitution {
  // Content
  string content = 1;
  // Source path
  optional string path = 2;
  // When last updated
  google.protobuf.Timestamp updated_at = 3;
}

// Agent runtime statistics
message AgentStats {
  int64 tokens_today = 1;     // Total tokens used today
  int32 tasks_done = 2;       // Completed tasks (all time)
  double success_rate = 3;    // Success rate 0.0-1.0
}

// Agent definition - unified concept for both executor and sub-agent roles
// Can be used as main phase executor OR as sub-agent
message Agent {
  string id = 1;                         // Unique identifier (for DB agents)
  string name = 2;
  string description = 3;
  optional string model = 4;
  optional ToolPermissions tools = 5;
  optional string prompt = 6;            // For sub-agent role context
  optional string system_prompt = 7;     // For executor role - system prompt
  optional string claude_config = 8;     // For executor role - JSON additional config
  optional string work_dir = 9;
  repeated string skill_refs = 10;
  optional string timeout = 11;
  optional string path = 12;             // for global agents from .md files
  SettingsScope scope = 13;
  optional string status = 14;           // "active" or "idle"
  optional AgentStats stats = 15;        // Runtime statistics
  bool is_builtin = 16;                  // Whether this is a built-in agent
  google.protobuf.Timestamp created_at = 17;
  google.protobuf.Timestamp updated_at = 18;
  // Note: NO thinking_enabled - that's a phase-level concern, not agent
}

// Tool permissions
message ToolPermissions {
  repeated string allow = 1;
  repeated string deny = 2;
}

// Tool info
message ToolInfo {
  string name = 1;
  string description = 2;
  string category = 3;
}

// Project script
message Script {
  string name = 1;
  string path = 2;
  string description = 3;
  optional string language = 4;
}

// Config stats for settings page
message ConfigStats {
  int32 slash_commands_count = 1;
  int64 claude_md_size = 2;
  int32 mcp_servers_count = 3;
  string permissions_profile = 4;
}

// =============================================================================
// SERVICE
// =============================================================================

service ConfigService {
  // Get ORC configuration
  rpc GetConfig(GetConfigRequest) returns (GetConfigResponse);

  // Update ORC configuration
  rpc UpdateConfig(UpdateConfigRequest) returns (UpdateConfigResponse);

  // Get Claude Code settings
  rpc GetSettings(GetSettingsRequest) returns (GetSettingsResponse);

  // Update Claude Code settings
  rpc UpdateSettings(UpdateSettingsRequest) returns (UpdateSettingsResponse);

  // Get settings hierarchy
  rpc GetSettingsHierarchy(GetSettingsHierarchyRequest) returns (GetSettingsHierarchyResponse);

  // List hooks
  rpc ListHooks(ListHooksRequest) returns (ListHooksResponse);

  // Create hook
  rpc CreateHook(CreateHookRequest) returns (CreateHookResponse);

  // Update hook
  rpc UpdateHook(UpdateHookRequest) returns (UpdateHookResponse);

  // Delete hook
  rpc DeleteHook(DeleteHookRequest) returns (DeleteHookResponse);

  // List skills
  rpc ListSkills(ListSkillsRequest) returns (ListSkillsResponse);

  // Create skill
  rpc CreateSkill(CreateSkillRequest) returns (CreateSkillResponse);

  // Update skill
  rpc UpdateSkill(UpdateSkillRequest) returns (UpdateSkillResponse);

  // Delete skill
  rpc DeleteSkill(DeleteSkillRequest) returns (DeleteSkillResponse);

  // Get CLAUDE.md content
  rpc GetClaudeMd(GetClaudeMdRequest) returns (GetClaudeMdResponse);

  // Update CLAUDE.md content
  rpc UpdateClaudeMd(UpdateClaudeMdRequest) returns (UpdateClaudeMdResponse);

  // Get constitution
  rpc GetConstitution(GetConstitutionRequest) returns (GetConstitutionResponse);

  // Update constitution
  rpc UpdateConstitution(UpdateConstitutionRequest) returns (UpdateConstitutionResponse);

  // Delete constitution
  rpc DeleteConstitution(DeleteConstitutionRequest) returns (DeleteConstitutionResponse);

  // List prompt templates
  rpc ListPrompts(ListPromptsRequest) returns (ListPromptsResponse);

  // Get prompt template
  rpc GetPrompt(GetPromptRequest) returns (GetPromptResponse);

  // Get default prompt template
  rpc GetDefaultPrompt(GetDefaultPromptRequest) returns (GetDefaultPromptResponse);

  // Update prompt template
  rpc UpdatePrompt(UpdatePromptRequest) returns (UpdatePromptResponse);

  // Delete custom prompt
  rpc DeletePrompt(DeletePromptRequest) returns (DeletePromptResponse);

  // List available prompt variables
  rpc ListPromptVariables(ListPromptVariablesRequest) returns (ListPromptVariablesResponse);

  // Agents
  rpc ListAgents(ListAgentsRequest) returns (ListAgentsResponse);
  rpc GetAgent(GetAgentRequest) returns (GetAgentResponse);
  rpc CreateAgent(CreateAgentRequest) returns (CreateAgentResponse);
  rpc UpdateAgent(UpdateAgentRequest) returns (UpdateAgentResponse);
  rpc DeleteAgent(DeleteAgentRequest) returns (DeleteAgentResponse);

  // Scripts
  rpc ListScripts(ListScriptsRequest) returns (ListScriptsResponse);
  rpc DiscoverScripts(DiscoverScriptsRequest) returns (DiscoverScriptsResponse);
  rpc GetScript(GetScriptRequest) returns (GetScriptResponse);
  rpc CreateScript(CreateScriptRequest) returns (CreateScriptResponse);
  rpc UpdateScript(UpdateScriptRequest) returns (UpdateScriptResponse);
  rpc DeleteScript(DeleteScriptRequest) returns (DeleteScriptResponse);

  // Tools
  rpc ListTools(ListToolsRequest) returns (ListToolsResponse);
  rpc GetToolPermissions(GetToolPermissionsRequest) returns (GetToolPermissionsResponse);
  rpc UpdateToolPermissions(UpdateToolPermissionsRequest) returns (UpdateToolPermissionsResponse);

  // Config stats
  rpc GetConfigStats(GetConfigStatsRequest) returns (GetConfigStatsResponse);

  // Export hooks to .claude/ directory
  rpc ExportHooks(ExportHooksRequest) returns (ExportHooksResponse);
  // Import hooks from .claude/ directory
  rpc ImportHooks(ImportHooksRequest) returns (ImportHooksResponse);
  // Export skills to .claude/ directory
  rpc ExportSkills(ExportSkillsRequest) returns (ExportSkillsResponse);
  // Import skills from .claude/ directory
  rpc ImportSkills(ImportSkillsRequest) returns (ImportSkillsResponse);
  // Scan .claude/ directory for discoverable hooks and skills
  rpc ScanClaudeDir(ScanClaudeDirRequest) returns (ScanClaudeDirResponse);
}

// =============================================================================
// REQUEST/RESPONSE MESSAGES
// =============================================================================

message GetConfigRequest {
  string project_id = 1;
}

message GetConfigResponse {
  Config config = 1;
}

message UpdateConfigRequest {
  string project_id = 1;
  optional AutomationConfig automation = 2;
  optional CompletionConfig completion = 3;
  optional ExportConfig export = 4;
  optional ClaudeConfig claude = 5;
  optional ExecutionConfig execution = 6;
  optional JiraConfig jira = 7;
}

message UpdateConfigResponse {
  Config config = 1;
}

message GetSettingsRequest {
  string project_id = 1;
  SettingsScope scope = 2;
}

message GetSettingsResponse {
  Settings settings = 1;
}

message UpdateSettingsRequest {
  string project_id = 1;
  SettingsScope scope = 2;
  Settings settings = 3;
}

message UpdateSettingsResponse {
  Settings settings = 1;
}

message GetSettingsHierarchyRequest {
  string project_id = 1;
}

message GetSettingsHierarchyResponse {
  SettingsHierarchy hierarchy = 1;
}

message ListHooksRequest {
  string project_id = 1;
  optional SettingsScope scope = 2;
}

message ListHooksResponse {
  repeated Hook hooks = 1;
}

message CreateHookRequest {
  string project_id = 1;
  string name = 2;
  // Script body (bash content)
  string content = 10;
  // Event type: "Stop", "PreToolUse", "PostToolUse"
  string event_type = 11;
  // Human-readable description
  string description = 12;
}

message CreateHookResponse {
  Hook hook = 1;
}

message UpdateHookRequest {
  string project_id = 1;
  // Hook ID to update
  string id = 10;
  // Optional field updates
  optional string name = 11;
  optional string description = 12;
  optional string content = 13;
  optional string event_type = 14;
}

message UpdateHookResponse {
  Hook hook = 1;
}

message DeleteHookRequest {
  string project_id = 1;
  // Hook ID to delete
  string id = 10;
}

message DeleteHookResponse {
  string message = 1;
}

message ListSkillsRequest {
  string project_id = 1;
  optional SettingsScope scope = 2;
}

message ListSkillsResponse {
  repeated Skill skills = 1;
}

message CreateSkillRequest {
  string project_id = 1;
  string name = 2;
  string description = 3;
  string content = 4;
  bool user_invocable = 5;
  optional string input_schema = 6;
  SettingsScope scope = 7;
}

message CreateSkillResponse {
  Skill skill = 1;
}

message UpdateSkillRequest {
  string project_id = 1;
  // Skill ID to update
  string id = 10;
  // Optional field updates
  optional string name = 11;
  optional string description = 12;
  optional string content = 13;
}

message UpdateSkillResponse {
  Skill skill = 1;
}

message DeleteSkillRequest {
  string project_id = 1;
  // Skill ID to delete
  string id = 10;
}

message DeleteSkillResponse {
  string message = 1;
}

message GetClaudeMdRequest {
  string project_id = 1;
}

message GetClaudeMdResponse {
  repeated ClaudeMd files = 1;
}

message UpdateClaudeMdRequest {
  string project_id = 1;
  SettingsScope scope = 2;
  string content = 3;
}

message UpdateClaudeMdResponse {
  ClaudeMd claude_md = 1;
}

message GetConstitutionRequest {
  string project_id = 1;
}

message GetConstitutionResponse {
  Constitution constitution = 1;
}

message UpdateConstitutionRequest {
  string project_id = 1;
  string content = 2;
}

message UpdateConstitutionResponse {
  Constitution constitution = 1;
}

message DeleteConstitutionRequest {
  string project_id = 1;
}

message DeleteConstitutionResponse {
  string message = 1;
}

message ListPromptsRequest {
  string project_id = 1;
}

message ListPromptsResponse {
  repeated PromptTemplate prompts = 1;
}

message GetPromptRequest {
  string project_id = 1;
  string phase = 2;
}

message GetPromptResponse {
  PromptTemplate prompt = 1;
}

message GetDefaultPromptRequest {
  string project_id = 1;
  string phase = 2;
}

message GetDefaultPromptResponse {
  PromptTemplate prompt = 1;
}

message UpdatePromptRequest {
  string project_id = 1;
  string phase = 2;
  string content = 3;
}

message UpdatePromptResponse {
  PromptTemplate prompt = 1;
}

message DeletePromptRequest {
  string project_id = 1;
  string phase = 2;
}

message DeletePromptResponse {
  string message = 1;
}

message ListPromptVariablesRequest {
  string project_id = 1;
}

message ListPromptVariablesResponse {
  repeated PromptVariable variables = 1;
}

// Agent request/response messages
message ListAgentsRequest {
  string project_id = 1;
  optional SettingsScope scope = 2;
}

message ListAgentsResponse {
  repeated Agent agents = 1;
}

message GetAgentRequest {
  string project_id = 1;
  string name = 2;
}

message GetAgentResponse {
  Agent agent = 1;
}

message CreateAgentRequest {
  string project_id = 1;
  string id = 2;                         // Unique identifier
  string name = 3;
  string description = 4;
  optional string model = 5;
  optional ToolPermissions tools = 6;
  optional string prompt = 7;            // For sub-agent role
  optional string system_prompt = 8;     // For executor role
  optional string claude_config = 9;     // For executor role - JSON config
  optional string work_dir = 10;
  repeated string skill_refs = 11;
  optional string timeout = 12;
  SettingsScope scope = 13;
}

message CreateAgentResponse {
  Agent agent = 1;
}

message UpdateAgentRequest {
  string project_id = 1;
  string id = 2;                         // Agent ID to update
  optional string name = 3;
  optional string description = 4;
  optional string model = 5;
  optional ToolPermissions tools = 6;
  optional string prompt = 7;            // For sub-agent role
  optional string system_prompt = 8;     // For executor role
  optional string claude_config = 9;     // For executor role - JSON config
  optional string work_dir = 10;
  repeated string skill_refs = 11;
  optional string timeout = 12;
}

message UpdateAgentResponse {
  Agent agent = 1;
}

message DeleteAgentRequest {
  string project_id = 1;
  string name = 2;
}

message DeleteAgentResponse {
  string message = 1;
}

// Script request/response messages
message ListScriptsRequest {
  string project_id = 1;
}

message ListScriptsResponse {
  repeated Script scripts = 1;
}

message DiscoverScriptsRequest {
  string project_id = 1;
}

message DiscoverScriptsResponse {
  repeated Script scripts = 1;
}

message GetScriptRequest {
  string project_id = 1;
  string name = 2;
}

message GetScriptResponse {
  Script script = 1;
}

message CreateScriptRequest {
  string project_id = 1;
  string name = 2;
  string path = 3;
  string description = 4;
  optional string language = 5;
}

message CreateScriptResponse {
  Script script = 1;
}

message UpdateScriptRequest {
  string project_id = 1;
  string name = 2;
  optional string path = 3;
  optional string description = 4;
  optional string language = 5;
}

message UpdateScriptResponse {
  Script script = 1;
}

message DeleteScriptRequest {
  string project_id = 1;
  string name = 2;
}

message DeleteScriptResponse {
  string message = 1;
}

// Tool request/response messages
message ListToolsRequest {
  string project_id = 1;
  optional SettingsScope scope = 2;
  bool by_category = 3;
}

message ListToolsResponse {
  repeated ToolInfo tools = 1;
  map<string, ToolList> by_category = 2;
}

message ToolList {
  repeated ToolInfo tools = 1;
}

message GetToolPermissionsRequest {
  string project_id = 1;
}

message GetToolPermissionsResponse {
  ToolPermissions permissions = 1;
}

message UpdateToolPermissionsRequest {
  string project_id = 1;
  ToolPermissions permissions = 2;
}

message UpdateToolPermissionsResponse {
  ToolPermissions permissions = 1;
}

// Config stats request/response
message GetConfigStatsRequest {
  string project_id = 1;
}

message GetConfigStatsResponse {
  ConfigStats stats = 1;
}

// Export/Import request/response messages

message ExportHooksRequest {
  string project_id = 1;
  repeated string hook_ids = 2;       // GlobalDB hook IDs to export
  SettingsScope destination = 3;       // PROJECT or GLOBAL
}

message ExportHooksResponse {
  repeated string written_paths = 1;   // Absolute paths of written files
}

message ExportSkillsRequest {
  string project_id = 1;
  repeated string skill_ids = 2;
  SettingsScope destination = 3;
}

message ExportSkillsResponse {
  repeated string written_paths = 1;
}

message DiscoveredItem {
  string name = 1;
  string content = 2;                  // Full content (hook script body / SKILL.md)
  string item_type = 3;               // "hook" or "skill"
  string status = 4;                   // "new" or "modified"
  string event_type = 5;              // For hooks: inferred from name, empty if unknown
  map<string, string> supporting_files = 6;  // For skills: filename -> content
}

message ScanClaudeDirRequest {
  string project_id = 1;
  SettingsScope source = 2;           // PROJECT or GLOBAL
}

message ScanClaudeDirResponse {
  repeated DiscoveredItem items = 1;
}

message ImportHooksRequest {
  string project_id = 1;
  repeated DiscoveredItem items = 2;
}

message ImportHooksResponse {
  repeated Hook imported = 1;
}

message ImportSkillsRequest {
  string project_id = 1;
  repeated DiscoveredItem items = 2;
}

message ImportSkillsResponse {
  repeated Skill imported = 1;
}
